入力欄を作成

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todoapp</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>todoappを作成する。</h1>
 
 
-    <buttom>入力欄</buttom>
+    <input class="text" type="text">
+    <button class="btn" type="button">出力する</button>
+
+    <form action="">
+        <h2>ここに出力されます</h2>
+        <ul></ul>
+
+    </form>
 </body>
 </html>
