ｃｓｓでデザインする

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <h1>todoappを作成する。</h1>
 
 
-    <input class="text" type="text">
-    <button class="btn" type="button">出力する</button>
-
+    
     <form action="">
-        <h2>ここに出力されます</h2>
-        <ul></ul>
-
+        <input class="text" type="text">
+        <button class="btn" type="button">出力する</button>
     </form>
+    
+    <div id="table">
+    <h2>ここに出力されます</h2>
+    <ul class="list"></ul>
+    </div>
 </body>
 </html>
