--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <input class="text" type="text">
         <button class="btn" type="button">出力する</button>
     </form>
-    
+
     <div id="table">
     <h2>ここに出力されます</h2>
     <ul class="list"></ul>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
